# coingame-miner

./: CMakeLists.txt  README.md  config.cfg
images/: flame_chart.txt
src/: main.cpp
src/Config/: Config.cpp
src/Miner/: Block.cpp  Block.h  BlockChain.cpp  BlockChain.h  Generator.cpp  Generator.h  GeneratorWorkers.cpp  State.h  Transaction.cpp  Transaction.h
